// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upgrade help logs a warning when \`scriptPreprocessor\` and/or \`preprocessorIgnorePatterns\` are used 1`] = `
"[33m[1m[1m●[1m Deprecation Warning[22m:

  Option [1m\\"preprocessorIgnorePatterns\\"[22m was replaced by [1m\\"transformIgnorePatterns\\"[22m, which support multiple preprocessors.

  Jest now treats your current configuration as:
  {
    [1m\\"transformIgnorePatterns\\"[22m: [1m[\\"bar/baz\\", \\"qux/quux\\"][22m
  }

  Please update your configuration.

  [1mConfiguration Documentation:[22m
  https://facebook.github.io/jest/docs/configuration.html
[39m"
`;

exports[`preset throws when preset not found 1`] = `
"[31m[1m[1m● [1mValidation Error[22m:

  Preset [1mdoesnt-exist[22m not found.

  [1mConfiguration Documentation:[22m
  https://facebook.github.io/jest/docs/configuration.html
[39m"
`;

exports[`rootDir throws if the config is missing a rootDir property 1`] = `
"[31m[1m[1m● [1mValidation Error[22m:

  Configuration option [1mrootDir[22m must be specified.

  [1mConfiguration Documentation:[22m
  https://facebook.github.io/jest/docs/configuration.html
[39m"
`;

exports[`testEnvironment throws on invalid environment names 1`] = `
"[31m[1m[1m● [1mValidation Error[22m:

  Test environment [1mphantom[22m cannot be found. Make sure the [1mtestEnvironment[22m configuration option points to an existing node module.

  [1mConfiguration Documentation:[22m
  https://facebook.github.io/jest/docs/configuration.html
[39m"
`;

exports[`testMatch throws if testRegex and testMatch are both specified 1`] = `
"[31m[1m[1m● [1mValidation Error[22m:

  Configuration options [1mtestMatch[22m and [1mtestRegex[22m cannot be used together.

  [1mConfiguration Documentation:[22m
  https://facebook.github.io/jest/docs/configuration.html
[39m"
`;
